--- a/css/style.css
+++ b/css/style.css
@@ -21,10 +21,10 @@ body {
 
 .globe {
   position: absolute;
-  width: 600px;
+  width: calc(100% - 320px);
   height: 600px;
   top: calc(50% - 300px);
-  left: calc(50% - 300px);
+  right: 0;
   display: block;
   margin: 0 auto;
   background: none;
@@ -127,5 +127,56 @@ body {
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3c9ae8', endColorstr='##009829',GradientType=1 );
   /* IE6-9 */
+}
+
+.data_block {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  width: calc(100% - 380px);
+  max-height: calc(100vh - 20px);
+  overflow: auto;
+  padding: 15px;
+  border-radius: 5px;
+  background: rgba(53, 53, 53, 0.8);
+}
+
+.data_block .data_list {
+  margin-bottom: 20px;
+}
+
+.data_block .title {
+  margin-bottom: 10px;
+  padding: 10px 5px;
+  position: relative;
+}
+
+.data_block .title span {
+  color: #fff;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.data_block .title:before {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  display: inline-block;
+  background-image: linear-gradient(120deg, #3c9ae8 0%, #009829 100%);
+}
+
+.data_block .subtitle {
+  font-size: 14px;
+  color: #ababab;
+}
+
+.data_block .show_data_box {
+  width: 100%;
+  padding: 15px;
+  border-radius: 5px;
+  background: rgba(0, 0, 0, 0.6);
 }
 /*# sourceMappingURL=style.css.map */
