--- a/css/style.scss
+++ b/css/style.scss
@@ -19,10 +19,10 @@ body {
 
 .globe {
   position: absolute;
-  width: 600px;
+  width: calc(100% - 320px);
   height: 600px;
   top: calc(50% - 300px);
-  left: calc(50% - 300px);
+  right: 0;
   display: block;
   margin: 0 auto;
   background: none;
@@ -80,7 +80,6 @@ $btn_color: #a3bed2;
       line-height: 30px;
       display: inline-block;
       vertical-align: middle;
-
     }
     &:after {
       content: "";
@@ -93,11 +92,7 @@ $btn_color: #a3bed2;
       /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#3c9ae8+0,27ea5b+100 */
       background: rgb(60, 154, 232); /* Old browsers */
       background: -moz-linear-gradient(left, rgba(60, 154, 232, 1) 0%, #009829 100%); /* FF3.6-15 */
-      background: -webkit-linear-gradient(
-        left,
-        rgba(60, 154, 232, 1) 0%,
-        #009829
-      ); /* Chrome10-25,Safari5.1-6 */
+      background: -webkit-linear-gradient(left, rgba(60, 154, 232, 1) 0%, #009829); /* Chrome10-25,Safari5.1-6 */
       background: linear-gradient(
         to right,
         rgba(60, 154, 232, 1) 0%,
@@ -115,12 +110,8 @@ $btn_color: #a3bed2;
       display: block;
       /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#3c9ae8+0,27ea5b+100 */
       background: rgb(60, 154, 232); /* Old browsers */
-      background: -moz-linear-gradient(left, rgba(60, 154, 232, 1) 0%, rgba(39, 234, 91, 1) 100%); /* FF3.6-15 */
-      background: -webkit-linear-gradient(
-        left,
-        rgba(60, 154, 232, 1) 0%,
-        #009829
-      ); /* Chrome10-25,Safari5.1-6 */
+      background: -moz-linear-gradient(left, #3c9ae8 0%, rgba(39, 234, 91, 1) 100%); /* FF3.6-15 */
+      background: -webkit-linear-gradient(left, rgba(60, 154, 232, 1) 0%, #009829); /* Chrome10-25,Safari5.1-6 */
       background: linear-gradient(
         to right,
         rgba(60, 154, 232, 1) 0%,
@@ -131,4 +122,51 @@ $btn_color: #a3bed2;
   }
 }
 
+.data_block {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  width: calc(100% - 380px);
+  max-height: calc(100vh - 20px);
+  overflow: auto;
+  padding: 15px;
+  border-radius: 5px;
+  background: rgba(53, 53, 53, 0.8);
+  .data_list{
+      margin-bottom: 20px;
+  }
 
+  .title{
+    margin-bottom: 10px;
+    padding: 10px 5px;
+    position: relative;
+      span{
+        color: #fff;
+        font-weight: bold;
+        font-size: 18px;
+      }
+      &:before{
+          content: '';
+          position: absolute;
+          left: 0;
+          bottom: 0;
+          width: 100%;
+          height: 2px;
+          display: inline-block;
+        //   background-image: linear-gradient(to top, #3c9ae8 0%, #009829 100%);
+          background-image: linear-gradient(120deg, #3c9ae8 0%, #009829 100%);
+      }
+  }
+
+  .subtitle{
+    font-size: 14px;
+    color: #ababab;
+  }
+
+  .show_data_box{
+    width: 100%;
+    padding: 15px;
+    border-radius: 5px;
+    background: rgba(0, 0, 0, 0.6);
+  }
+}
