--- a/css/style.css
+++ b/css/style.css
@@ -42,11 +42,12 @@ body {
   z-index: 50;
   width: 300px;
   max-height: 100vh;
+  height: 100vh;
   overflow: auto;
-  left: 15px;
-  top: 15px;
+  left: 0;
+  top: 0;
   padding: 20px;
-  background: rgba(0, 0, 0, 0.1);
+  background: rgba(0, 0, 0, 0.3);
   border-radius: 5px;
 }
 
@@ -66,11 +67,17 @@ body {
   display: block;
   margin-bottom: 10px;
   background: none;
-  color: #a3bed2;
-  border: 1px solid #a3bed2;
+  color: #80e2cc;
+  border: 1px solid #14bf98;
   width: 100%;
   -webkit-transition: 0.3s;
   transition: 0.3s;
+  font-weight: 200;
+}
+
+.left_block .city_btn:hover, .left_block .city_btn.clk {
+  background: #14bf98;
+  color: #fff;
 }
 
 .left_block .area_box {
@@ -136,9 +143,32 @@ body {
   width: calc(100% - 380px);
   max-height: calc(100vh - 20px);
   overflow: auto;
-  padding: 15px;
+  padding: 35px 15px 15px 15px;
   border-radius: 5px;
-  background: rgba(53, 53, 53, 0.8);
+  background: rgba(29, 29, 29, 0.8);
+}
+
+.data_block .close_btn {
+  position: absolute;
+  display: inline-block;
+  vertical-align: middle;
+  top: 15px;
+  right: 15px;
+  font-size: 16px;
+  color: #fff;
+  border-radius: 50%;
+  background: #ff2e5d;
+  display: block;
+  width: 25px;
+  height: 25px;
+  line-height: 25px;
+  text-align: center;
+  -webkit-transition: .3;
+  transition: .3;
+}
+
+.data_block .close_btn:hover {
+  background: #b31335;
 }
 
 .data_block .data_list {
@@ -158,7 +188,7 @@ body {
 }
 
 .data_block .title:before {
-  content: '';
+  content: "";
   position: absolute;
   left: 0;
   bottom: 0;
@@ -177,6 +207,6 @@ body {
   width: 100%;
   padding: 15px;
   border-radius: 5px;
-  background: rgba(0, 0, 0, 0.6);
+  background: #fff;
 }
 /*# sourceMappingURL=style.css.map */
