--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,11 @@
 
 body {
   padding-top: 0;
+  background: #2b3135;
 }
 
 .space_block {
   position: relative;
-  background: #2b3135;
   min-height: 100vh;
   width: 100%;
 }
@@ -47,7 +47,7 @@ body {
   left: 0;
   top: 0;
   padding: 20px;
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(134, 134, 134, 0.3);
   border-radius: 5px;
 }
 
@@ -137,6 +137,7 @@ body {
 }
 
 .data_block {
+  display: none;
   position: fixed;
   top: 20px;
   right: 20px;
@@ -145,7 +146,7 @@ body {
   overflow: auto;
   padding: 35px 15px 15px 15px;
   border-radius: 5px;
-  background: rgba(29, 29, 29, 0.8);
+  background: rgba(58, 58, 58, 0.8);
 }
 
 .data_block .close_btn {
@@ -163,8 +164,8 @@ body {
   height: 25px;
   line-height: 25px;
   text-align: center;
-  -webkit-transition: .3;
-  transition: .3;
+  -webkit-transition: 0.3;
+  transition: 0.3;
 }
 
 .data_block .close_btn:hover {
@@ -208,5 +209,88 @@ body {
   padding: 15px;
   border-radius: 5px;
   background: #fff;
+}
+
+html,
+body {
+  background: black;
+  height: 100%;
+  margin: 0;
+  overflow: hidden;
+  -webkit-perspective: 1800;
+          perspective: 1800;
+  -webkit-perspective-origin: 0% 0%;
+          perspective-origin: 0% 0%;
+}
+
+#space {
+  position: fixed;
+  top: 0;
+  left: 0;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  width: 100%;
+  height: 100%;
+  -webkit-animation: rotate 300s linear 0s infinite alternate;
+          animation: rotate 300s linear 0s infinite alternate;
+}
+
+.light {
+  position: absolute;
+  top: -50%;
+  left: -50%;
+  height: 3px;
+  width: 3px;
+  border-radius: 200px;
+  background: white;
+  -webkit-box-shadow: 0px 0px 20px 1px white;
+          box-shadow: 0px 0px 20px 1px white;
+}
+
+@-webkit-keyframes rotate {
+  from {
+    -webkit-transform: rotateY(0deg) rotateX(0deg);
+            transform: rotateY(0deg) rotateX(0deg);
+  }
+  to {
+    -webkit-transform: rotateY(360deg) rotateX(360deg);
+            transform: rotateY(360deg) rotateX(360deg);
+  }
+}
+
+@keyframes rotate {
+  from {
+    -webkit-transform: rotateY(0deg) rotateX(0deg);
+            transform: rotateY(0deg) rotateX(0deg);
+  }
+  to {
+    -webkit-transform: rotateY(360deg) rotateX(360deg);
+            transform: rotateY(360deg) rotateX(360deg);
+  }
+}
+
+#scale {
+  position: relative;
+  z-index: 1;
+  text-align: center;
+  top: 80%;
+  font-family: Arial, sans-serif;
+  border-radius: 5px;
+  border: 2px solid white;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  color: white;
+  font-size: 1.1em;
+  padding: 10px 20px;
+  margin: auto;
+  width: 100px;
+  -webkit-transition: ease all 0.2s;
+  transition: ease all 0.2s;
+  cursor: pointer;
+}
+
+#scale:hover {
+  background: white;
+  color: black;
 }
 /*# sourceMappingURL=style.css.map */
