--- a/css/style.scss
+++ b/css/style.scss
@@ -13,7 +13,7 @@ body {
 
 .space_block {
   position: relative;
-//   background: #2b3135;
+  //   background: #2b3135;
   min-height: 100vh;
   width: 100%;
 }
@@ -201,6 +201,100 @@ $btn_color: #a3bed2;
     padding: 15px;
     border-radius: 5px;
     background: #fff;
+  }
+}
+
+.map_btn_box {
+  position: fixed;
+  top: 0;
+  right: -250px;
+  transition: 0.5s;
+  &.clk {
+    right: 0;
+  }
+
+  #map_btn_ctrl {
+    position: absolute;
+    height: 70px;
+    line-height: 70px;
+    text-align: center;
+    left: -45px;
+    width: 45px;
+    background: rgba(60, 60, 60, 0.6);
+    top: 0px;
+    border-radius: 0px 0 0 10px;
+    border:1px solid rgba(255, 255, 255, 0.3);
+    transition: .3s;
+    &:hover{
+        border:1px solid #14bf98;
+    }
+    i {
+      position: relative;
+      display: inline;
+      font-size: 20px;
+      color: rgb(51, 202, 157);
+      transition: 0.3s;
+      transform: scale(1);
+      animation: ctrlbtn_ab 2s linear 0s infinite alternate;
+      &.leaf {
+        color: rgba(39, 234, 91, 1);
+      }
+      &.heartbeat {
+        color: #ef2b45;
+      }
+    }
+  }
+  //   動畫ß
+  @keyframes ctrlbtn_ab {
+    0% {
+      font-size: 20px;
+    }
+    60% {
+        font-size: 18px;
+        // color:#fff;
+    }
+    80% {
+        font-size: 24px;
+        color: #fff;
+    }
+    100% {
+        font-size: 20px;
+    }
+  }
+
+  .btn_box {
+    width: 250px;
+    height: 100vh;
+    padding: 15px;
+    background: rgba(134, 134, 134, 0.3);
+    button {
+      width: 100%;
+      padding: 10px;
+      border-radius: 5px;
+      transition: 0.3s;
+      background: none;
+      border: 1px solid #14b6bf;
+      color: #88d9dd;
+      margin-bottom: 15px;
+      cursor: pointer;
+      text-align: left;
+      font-weight: 200;
+      &:hover {
+        background: #14b6bf;
+        color: #fff;
+      }
+      i {
+        font-size: 14px;
+        display: inline-block;
+        vertical-align: middle;
+        margin-right: 15px;
+      }
+      span {
+        font-size: 14px;
+        display: inline-block;
+        vertical-align: middle;
+      }
+    }
   }
 }
 
