--- a/css/style.css
+++ b/css/style.css
@@ -234,8 +234,8 @@ body {
   top: 0px;
   border-radius: 0px 0 0 10px;
   border: 1px solid rgba(255, 255, 255, 0.3);
-  -webkit-transition: .3s;
-  transition: .3s;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 
 .map_btn_box #map_btn_ctrl:hover {
@@ -333,6 +333,29 @@ body {
   font-size: 14px;
   display: inline-block;
   vertical-align: middle;
+}
+
+.marquee_bar {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  padding: 10px;
+  font-size: 16px;
+  color: #fff;
+  width: calc(100% - 300px);
+}
+
+.marquee_bar span {
+  font-size: 16px;
+  font-weight: bold;
+  color: #a9a9aa;
+}
+
+.marquee_bar label {
+  font-size: 14px;
+  font-weight: 200;
+  margin-right: 20px;
+  color: #d4812a;
 }
 
 html,
