--- a/css/style.scss
+++ b/css/style.scss
@@ -209,6 +209,27 @@ $btn_color: #a3bed2;
   top: 0;
   right: -250px;
   transition: 0.5s;
+  .map_btn_title {
+    display: block;
+    width: 100%;
+    font-size: 20px;
+    color: #fff;
+    position: relative;
+    padding:10px 5px;
+    &:after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      bottom: 0;
+      left: 0;
+      display: block;
+      background: #3c9ae8;
+      background: -webkit-gradient(linear, left top, right top, from(#3c9ae8), to(#009829));
+      background: linear-gradient(to right, #3c9ae8 0%, #009829);
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3c9ae8', endColorstr='##009829',GradientType=1 );
+    }
+  }
   &.clk {
     right: 0;
   }
